--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,10 @@
 		"start": "nodemon index.js"
 	},
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"config": "^3.3.9",
 		"express": "^4.18.2",
+		"express-validator": "^7.0.1",
 		"mongoose": "^8.0.0",
 		"nodemon": "^3.0.1"
 	}
