--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
 		"bcryptjs": "^2.4.3",
 		"config": "^3.3.9",
 		"express": "^4.18.2",
+		"express-fileupload": "^1.4.2",
 		"express-validator": "^7.0.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.0.0",
