--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,12 @@
 	"type": "module",
 	"scripts": {
 		"start": "NODE_ENV=production node index.js",
-		"dev": "NODE_ENV=development nodemon index.js"
+		"dev": "nodemon  index.js"
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"config": "^3.3.9",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-fileupload": "^1.4.2",
 		"express-validator": "^7.0.1",
